# aaw--supervised-harness

./: .gitignore  Cargo.toml  README.md
.ai-context/: ownership.md  phase-1  phase-2  phase-3  report.md  tasks
.ai-context/phase-1/: design.md  next.md
.ai-context/phase-1/Tasks/: 00-interface-seed-and-contracts.md  06-rustyline-fallback-integration.md  07-orchestrator-state-helpers.md  11-tui-pty-e2e.md  12-shell-completion-export.md
.ai-context/phase-1/tasks/: 02-completion-engine.md  (+7 more)
.ai-context/phase-2/: Approach.md  Plan.md  design.md  next.md
.ai-context/phase-3/: Design.md  Plan.md
.harness/: state.sqlite
docs/test-owned/: real-provider-smoke.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/completion/: mod.rs  shell.rs
src/config/: mod.rs
src/doctor/: mod.rs
src/domain/: config.rs  entities.rs  ids.rs  mod.rs  status.rs
src/interactive/: fallback.rs  mod.rs
src/orchestrator/: mod.rs  objective.rs  supervisor.rs  supervisor_state.rs
src/patch/: mod.rs
src/planner/: mod.rs
src/prompts/: mod.rs
src/providers/: mod.rs
src/runtime/: catalog.rs  events.rs  mod.rs  supervise.rs
src/security/: mod.rs  validation_command_policy.rs
src/service/: mod.rs  supervisor.rs
src/state/: mod.rs  objective_queries.rs  supervisor_queries.rs
src/tui/: app.rs  app_state.rs  composer.rs  input.rs  mod.rs  panes.rs  render.rs  runtime_bridge.rs  shell_escape.rs  theme.rs  transcript.rs
src/workspace/: mod.rs
tests/: e2e.rs  fixture_skeleton.rs  tui_pty.rs
tests/support/: binary.rs  fake_providers.rs  fixtures.rs  pty.rs
(+29 files in other folders)
