[package]
name = "harness"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
clap = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
